add Cors rules, have problem with correct login. Logging for debug added. Local dev port changed.